[=] Fixed bugs, Removed something, Added some files for new function. [*] Fix bugs. [-] Remove implements. [+] Add i18n files, message files and config file.