@@ -4,10 +4,14 @@ import org.bukkit.plugin.java.JavaPlugin;
 import site.levimarvin.pxautomessage.PxAutoMessage;
 import site.levimarvin.pxautomessage.mc.command.*;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 
+/**
+ * @author Levi Marvin
+ */
 public class Register {
-    private static final JavaPlugin plugin = PxAutoMessage.getPlugin();
+    private static final JavaPlugin PLUGIN = PxAutoMessage.getPlugin();
     private static HashMap<String, Class<?>> cmdMap = new HashMap<>();
 
     public static void registerCmd() {
@@ -16,14 +20,14 @@ public class Register {
         cmdMap.forEach((k, v) -> {
             org.bukkit.command.CommandExecutor commandExecutor = null;
             try {
-                commandExecutor = (org.bukkit.command.CommandExecutor) v.newInstance();
+                commandExecutor = (org.bukkit.command.CommandExecutor) v.getDeclaredConstructor().newInstance();
             } catch (
-                    InstantiationException | IllegalAccessException e
+                    InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e
             ) {
                 e.printStackTrace();
             }
-            plugin.getServer().getConsoleSender().sendMessage(PxAutoMessage.PREFIX + "§a |   注册命令：" + k);
-            plugin.getServer().getPluginCommand(k + "").setExecutor(new CommandExecutor(commandExecutor));
+            PLUGIN.getServer().getConsoleSender().sendMessage(PxAutoMessage.PREFIX + "§a |   注册命令：" + k);
+            PLUGIN.getServer().getPluginCommand(k + "").setExecutor(new CommandExecutor(commandExecutor));
         });
     }
 
